Fixed bug #38325 (spl_autoload_register() gaves wrong line for "class not found").